@@ -30,9 +30,12 @@ function _mount_dev_check ()
 # ==============================================================================
 function _mount_dir_check ()
 {
-  test -d "$1"
+  if [[ ! -d "$1" ]]
+  then
+    return 0
+  fi
 
-  return "$?"
+  return 1
 }
 
 # ==============================================================================
